@@ -22,3 +22,4 @@ Masahiro Inamura - Japanese
 Matsuu Takuto - Japanese
 Carlos Schlyter - Portugese
 andriykopanytsia - Ukranian
+Antal Zoltán - Hungarian
