@@ -1,0 +1,165 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<resources>
+    <string name="about_feedback">Visszajelzés:</string>
+    <string name="about_homepage">Weboldal:</string>
+    <string name="about_ok">OK</string>
+    <string name="AboutText">KeePassDroid a KeePass jelszókezelő android implementációja.</string>
+    <string name="about_twitter">Twitter:</string>
+    <string name="accept">Elfogadás</string>
+    <string name="add_entry">Bejegyzés hozzáadása</string>
+    <string name="add_group">Csoport hozzáadása</string>
+    <string name="add_group_title">Csoport hozzáadása</string>
+    <string name="algorithm">Algoritmus</string>
+    <string name="algorithm_colon">Algoritmus:</string>
+    <string name="app_name">KeePassDroid</string>
+    <string name="app_timeout">Alkalmazás időkorlátja</string>
+    <string name="app_timeout_summary">Beállíthatja, mennyi idő után kerüljön lezárásra az adatbázis.</string>
+    <string name="application">Alkalmazás</string>
+    <string name="application_settings">Alkalmazás beállítások</string>
+    <string name="brackets">Zárójelek</string>
+    <string name="browser_intall_text">A fájl kiválasztásához önnek egy nyílt forrású fájlkezelő programra lesz szüksége, kattintson a lenti telepítés linkre. Előfordulhat, hogy első használatakor nem fog megfelelően működni a fájlkezelő program.</string>
+    <string name="building_search_idx">Keresési index létrehozása…</string>
+    <string name="cancel">Mégsem</string>
+    <string name="ClearClipboard">Vágólap törölve.</string>
+    <string name="clipboard_timeout">Vágólap időkorlátja</string>
+    <string name="clipboard_timeout_summary">Beállíthatja, mennyi idő után kerüljön törlésre a vágólap</string>
+    <string name="copy_username">Felhasználónév másolása a vágólapra</string>
+    <string name="copy_password">Jelszó másolása a vágólapra</string>
+    <string name="creating_db_key">Adatbázis létrehozása…</string>
+    <string name="current_group">Jelenlegi csoport:</string>
+    <string name="current_group_root">Jelenlegi csoport: Gyökérkönyvtár</string>
+    <string name="database">Adatbázis</string>
+    <string name="decrypting_db">Adatbázis tartalmának dekódolása…</string>
+    <string name="decrypting_entry">Bejegyzés dekódolása</string>
+    <string name="default_checkbox">Adatbázis beállítása alapértelmezettként</string>
+    <string name="digits">Számok</string>
+    <string name="disclaimer_formal">KeePassDroid Copyright 2009–2012 Brian Pellin. Ehhez a programhoz SEMMILYEN GARANCIA NEM JÁR; Ez egy szabad szoftver, GNU General Public License v2 vagy későbbi verziójának feltételei mellett terjeszthető, illetve módosítható.  Fordította:  intel</string>
+    <string name="ellipsis">…</string>
+    <string name="enter_filename">Adja meg az adatbázis fájlnevét:</string>
+    <string name="entry_accessed">Utolsó hozzáférés:</string>
+    <string name="entry_and_or">Adja meg a jelszót és/vagy a kulcsfájlt, hogy kinyithassa az adatbázist:</string>
+    <string name="entry_cancel">Mégsem</string>
+    <string name="entry_comment">Megjegyzés:</string>
+    <string name="entry_confpassword">Jelszó megerősítése:</string>
+    <string name="entry_created">Létrehozva:</string>
+    <string name="entry_expires">Lejárat:</string>
+    <string name="entry_keyfile">Kulcsfájl (opcionális)</string>
+    <string name="entry_modified">Módosítva:</string>
+    <string name="entry_password">Jelszó:</string>
+    <string name="entry_save">Mentés</string>
+    <string name="entry_title">Név:</string>
+    <string name="entry_url">URL:</string>
+    <string name="entry_user_name">Felhasználónév:</string>
+    <string name="error_arc4">Az ArcFour folyamrejtjel nem támogatott.</string>
+    <string name="error_can_not_handle_uri">Nem található kezelő ehhez az uri-hoz.</string>
+    <string name="error_could_not_create_group">Hiba a csoport létrehozásakor.</string>
+    <string name="error_could_not_create_parent">Nem sikerült létrehozni szülő könyvtárat.</string>
+    <string name="error_database_exists">A fájl már létezik.</string>
+    <string name="error_database_settings">Nem sikerült meghatározni az adatbázis beállításokat.</string>
+    <string name="error_failed_to_launch_link">Hiba a cím megnyitásakor.</string>
+    <string name="error_filename_required">Fájlnév szükséges.</string>
+    <string name="error_file_not_create">Nem sikerült létrehozni a fájlt:</string>
+    <string name="error_invalid_db">Érvénytelen adatbázis.</string>
+    <string name="error_invalid_path">Érvénytelen útvonal.</string>
+    <string name="error_no_name">Egy névre van szükség.</string>
+    <string name="error_nopass">Jelszóra vagy kulcsfájlra van szükség.</string>
+    <string name="error_out_of_memory">A telefon memóriája megtelt az adatbázis feldolgozása közben. Lehet túl sok ez a telefonnak.</string>
+    <string name="error_pass_gen_type">Legalább egy jelszógenerálási típust kell választania</string>
+    <string name="error_pass_match">A jelszavak nem egyeznek meg.</string>
+    <string name="error_rounds_not_number">A menetek csak számokat tartalmazhatnak.</string>
+    <string name="error_rounds_too_large">A menetek száma túl nagy. A maximális 2147483648.</string>
+    <string name="error_title_required">Cím szükséges.</string>
+    <string name="error_wrong_length">Írjon be egy pozitív egész számot a hossz mezőbe</string>
+    <string name="FileNotFound">A fájl nem található.</string>
+    <string name="file_browser">Fájlkezelő</string>
+    <string name="generate_password">Jelszó generálás</string>
+    <string name="group">Csoport</string>
+    <string name="hint_comment">megjegyzés</string>
+    <string name="hint_conf_pass">jelszó megerőítése</string>
+    <string name="hint_generated_password">generált jelszó</string>
+    <string name="hint_group_name">Csoportnév</string>
+    <string name="hint_keyfile">kulcsfájl</string>
+    <string name="hint_length">hosszúság</string>
+    <string name="hint_pass">jelszó</string>
+    <string name="hint_title">név</string>
+    <string name="hint_url">url</string>
+    <string name="hint_username">felhasználónév</string>
+    <string name="install_from_market">Letöltés a Google Play-ről</string>
+    <string name="install_from_website">Letöltés az weboldalról</string>
+    <string name="InvalidPassword">Érvénytelen jelszó vagy kulcsfájl.</string>
+    <string name="invalid_db_sig">Az adabázis formátuma nem ismert.</string>
+    <string name="length">Hossz</string>
+    <string name="list_size_title">Csoportok betűmérete</string>
+    <string name="list_size_summary">Beállítja a csoportok betűméretét</string>
+    <string name="loading_database">Adatbázis betöltése…</string>
+    <string name="lowercase">Kisbetűk</string>
+    <string name="MaskedPassword">*****</string>
+    <string name="maskpass_title">Jelszó elrejtése</string>
+    <string name="maskpass_summary">Jelszavak elrejtése alapértelmezésben</string>
+    <string name="menu_about">Névjegy</string>
+    <string name="menu_change_key">Mesterkulcs megváltoztatása</string>
+    <string name="menu_copy_pass">Jelszó másolása</string>
+    <string name="menu_copy_user">Felhasználónév másolása</string>
+    <string name="menu_create">Létrehozás</string>
+    <string name="menu_app_settings">Beállítások</string>
+    <string name="menu_db_settings">Adatbázis beállítások</string>
+    <string name="menu_delete">Törlés</string>
+    <string name="menu_donate">Támogatás</string>
+    <string name="menu_edit">Szerkesztés</string>
+    <string name="menu_hide_password">Jelszó elrejtése</string>
+    <string name="menu_homepage">Weboldal megtekintése</string>
+    <string name="menu_lock">Adatbázis lezárása</string>
+    <string name="menu_open">Megnyitás</string>
+    <string name="menu_rename">Átnevezés</string>
+    <string name="menu_search">Keresés</string>
+    <string name="menu_url">Ugrás az URL-re</string>
+    <string name="minus">Mínusz</string>
+    <string name="never">Soha</string>
+    <string name="no_keys">Nincs bejegyzés az adatbázisban vagy csoportban.</string>
+    <string name="no_results">Nincs találat</string>
+    <string name="no_url_handler">Nem található kezelő ehhez az url-hez.</string>
+    <string name="open_recent">Korábbi adatbázis megnyitása (kattintson rá a megnyitásra):</string>
+    <string name="omitbackup_title">Keresési kivételek</string>
+    <string name="omitbackup_summary">A Backup és Lomtár csoportok kihagyása a keresésből</string>
+    <string name="pass_filename">KeePass adatbázis fájlnév:</string>
+    <string name="pass_ok">Ok</string>
+    <string name="password_title">Adatbázis jelszó megadása</string>
+    <string name="progress_create">Új adatbázis létrehozása…</string>
+    <string name="progress_title">Feldolgozás…</string>
+    <string name="remember_keyfile_summary">Jegyezze meg a kulcsfájlok helyét</string>
+    <string name="remember_keyfile_title">Kulcsfájl mentése</string>
+    <string name="remove_from_filelist">Eltávolítás</string>
+    <string name="rijndael">Rijndael (AES)</string>
+    <string name="root">Gyökérkönyvár</string>
+    <string name="rounds">Titkosítási menetek száma</string>
+    <string name="rounds_explaination">A titkosítási menetek számának növelésével extra védelemet kaphat a brute force támadások ellen, ugyanakkor jelentősen lassíthatja az adatbázis betöltését vagy mentését.</string>
+    <string name="rounds_hint">Menetek száma</string>
+    <string name="saving_database">Adatbázis mentése…</string>
+    <string name="space">Szóköz</string>
+    <string name="search_label">Keresés</string>
+    <string name="show_password">Jelszó megjelenítése</string>
+    <string name="sort_name">Rendezés név alapján</string>
+    <string name="sort_db">Adatbázis rendezése</string>
+    <string name="special">Speciális</string>
+    <string name="search_hint">Bejegyzés cím/leírás</string>
+    <string name="twofish">Twofish</string>
+    <string name="underline">Aláhúzás</string>
+    <string name="unsupported_db_version">Nem támogatott adatbázis.</string>
+    <string name="uppercase">Nagybetűk</string>
+    <string name="warning_read_only">A memóriakártya jelenleg csak olvasható. Lehet, hogy nem tudja menteni a módosításokat az adatbázisban.</string>
+    <string name="warning_unmounted">A memóriakártya jelenleg el van távolítva. Nem fogja tudni az adatbázist betölteni vagy módosítani.</string>
+    <string name="version_label">Verzió:</string>
+    
+    <string-array name="clipboard_timeout_options">
+    	<item>30 seconds</item>
+    	<item>1 minute</item>
+    	<item>5 minutes</item>
+    	<item>Never</item>
+    </string-array>
+    <string-array name="list_size_options">
+    	<item>Small</item>
+    	<item>Medium</item>
+    	<item>Large</item>
+    </string-array>
+    
+</resources>
